--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 <section class="bg-white py-10">
 <div class="max-w-6xl px-6 py-10 mx-auto">
 <main class="relative z-20 w-full md:flex md:items-center xl:my-12">
-<div class="absolute w-full h-full md:h-full md:p-5 bg-gradient-to-r from-blue-700 to-blue-600 -z-10 rounded-2xl shadow-lg" id="color-descripcion"></div>
+<div class="absolute w-full h-full md:h-full md:p-5 bg-gradient-to-r from-gray-600 to-gray-400 -z-10 rounded-2xl shadow-lg" id="color-descripcion"></div>
 <div class="w-full p-6 md:items-center rounded-2xl md:p-0 md:justify-evenly md:flex md:space-x-60">
 <!-- VIDEO DESCRIPCION -->
 <div class="w-full md:h-[250px] md:h-full md:w-4/6 perspective-left" data-aos="fade-up" data-aos-delay="1000" style="width: 350px;">
