--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		window.addEventListener('DOMContentLoaded', () => {
 			const heroBackground1 = document.getElementById('hero-background-1');
 			const heroBackground2 = document.getElementById('hero-background-2');
-			const images = ["Imagenes/hero1.webp", "Imagenes/hero2.webp", "Imagenes/hero3.webp"];
+			const images = ["hero1.webp", "hero2.webp", "hero3.webp"];
 
 			// Iniciar el carrusel solo si la ventana es mayor que 768px
 			changeBackgroundImage(heroBackground1, heroBackground2, images, 0);
@@ -665,11 +665,11 @@
 
 		@media only screen and (max-width: 600px) {
 			#imagen-fondo-productos {
-				content: url('Imagenes/fondo_productos_celular.webp');
+				content: url('fondo_productos_celular.webp');
 			}
 
 			#imagen-fondo-acerca-de {
-				content: url('Imagenes/acerca_de_fondo_celular.webp');
+				content: url('acerca_de_fondo_celular.webp');
 			}
 		}
 
@@ -707,7 +707,7 @@
 <div class="py-0 front-elements">
 <div class="flex justify-center">
 <div class="md:mt--2 flex justify-center items-center bg-white rounded drop-shadow-xl h-full w-8/12 h-full md:w-3/4 bg-opacity-0" data-aos="fade-down" id="card-logo">
-<img alt="logo" class="aos-init aos-animate w-8/12 h-full md:w-3/4" data-aos="fade-up" fetchpriority="high" id="logo-image" src="Imagenes/logo.webp"/>
+<img alt="logo" class="aos-init aos-animate w-8/12 h-full md:w-3/4" data-aos="fade-up" fetchpriority="high" id="logo-image" src="logo.webp"/>
 </div>
 </div>
 <h1 class="text-5xl md:text-8xl text-center font-bold drop-shadow-xl" data-aos="fade-up" id="nombre-empresa"></h1>
@@ -758,7 +758,7 @@
 <!-- Seccion Oferta -->
 <section id="seccion-oferta">
 <div class="flex-col overflow-hidden relative flex min-h-[420px] items-center px-5">
-<img class="absolute z-[-1] h-full w-full object-cover object-center inset-0" id="imagen-oferta" loading="lazy" src="Imagenes/oferta_fondo.webp"/>
+<img class="absolute z-[-1] h-full w-full object-cover object-center inset-0" id="imagen-oferta" loading="lazy" src="oferta_fondo.webp"/>
 <section class="relative w-full max-w-[1280px] mt-28 mb-24 max-md:max-w-full max-md:my-10">
 <div class="gap-5 flex max-md:flex-col max-md:items-stretch max-md:gap-0">
 <article class="flex flex-col items-stretch max-md:w-full max-md:ml-0">
@@ -782,7 +782,7 @@
 <!-- Sección 3 Tarjetas -->
 <section class="relative bg-gray-50 py-10" id="productos">
 <div class="absolute inset-0">
-<img class="object-cover h-full w-full" id="imagen-fondo-productos" src="Imagenes/fondo_productos_escritorio.webp"/>
+<img class="object-cover h-full w-full" id="imagen-fondo-productos" src="fondo_productos_escritorio.webp"/>
 </div>
 <!-- <h1 class="text-4xl md:text-6xl drop-shadow-2xl font-bold text-center text-gray-50 capitalize drop-shadow-xl" data-aos="fade-down" data-aos-delay="0">
 			<span id="titulo-productos" class="text-transparent bg-clip-text bg-gradient-to-t to-gray-50 from-slate-300">Integración con Whatsapp</span></h1>
@@ -793,17 +793,17 @@
 <div class="grid grid-cols-1 gap-4 md:gap-0 md:grid-cols-2 xl:grid-cols-3">
 <div class="glass flex flex-col items-center m-2 md:m-8 space-y-3 text-center hover:shadow-lg hover:shadow-black/30" data-aos="fade-up" data-aos-delay="1000" id="card-1">
 <h1 class="font-bold capitalize py-1 h-20 text-white hover:text-black text-2xl md:text-2xl" id="nombre-producto-1">Invernaderos y Estructuras de Acero</h1>
-<img alt="product 1" class="w-100 p-2 rounded-xl mt-5 hover:scale-100" id="imagen-producto" src="Imagenes/productos1.webp"/>
+<img alt="product 1" class="w-100 p-2 rounded-xl mt-5 hover:scale-100" id="imagen-producto" src="productos1.webp"/>
 <p class="text-white hover:text-black" id="product-description-1">Creamos invernaderos a medida, integrando estructuras de acero duraderas y diseñadas específicamente para cumplir con tus requisitos agrícolas.</p>
 </div>
 <div class="glass flex flex-col items-center m-2 md:m-8 space-y-3 text-center hover:shadow-lg hover:shadow-black/30" data-aos="fade-up" data-aos-delay="2000" id="card-1">
 <h1 class="font-bold capitalize py-1 h-20 text-white hover:text-black text-2xl md:text-2xl" id="nombre-producto-200">Accesorios Innovadores para Invernaderos</h1>
-<img alt="product 2" class="w-100 p-2 rounded-xl mt-5 hover:scale-100" id="imagen-producto" src="Imagenes/productos2.webp"/>
+<img alt="product 2" class="w-100 p-2 rounded-xl mt-5 hover:scale-100" id="imagen-producto" src="productos2.webp"/>
 <p class="text-white hover:text-black" id="product-description-1">Ofrecemos una selección completa de accesorios para invernaderos, incluyendo avanzados sistemas de riego, control de clima y más, para optimizar tu producción.</p>
 </div>
 <div class="glass flex flex-col items-center m-2 md:m-8 space-y-3 text-center hover:shadow-lg hover:shadow-black/30" data-aos="fade-up" data-aos-delay="3000" id="card-1">
 <h1 class="font-bold capitalize py-1 h-20 text-white hover:text-black text-2xl md:text-2xl" id="nombre-producto-3">Sistemas de Riego de Alta Eficiencia</h1>
-<img alt="product 3" class="w-100 p-2 rounded-xl mt-5 hover:scale-100" id="imagen-producto" src="Imagenes/productos3.webp"/>
+<img alt="product 3" class="w-100 p-2 rounded-xl mt-5 hover:scale-100" id="imagen-producto" src="productos3.webp"/>
 <p class="text-white hover:text-black" id="product-description-1">Desarrollamos y suministramos sistemas de riego personalizados que garantizan la eficiencia del agua y el crecimiento saludable de tus cultivos, adaptándose a las condiciones específicas de tu invernadero.</p>
 </div>
 </div>
@@ -824,7 +824,7 @@
 					</div> -->
 <div class="flex justify-center" data-aos="fade-up" data-aos-delay="1400">
 <!-- <img src="https://media-public.canva.com/MADQ43cICJk/1/screen.jpg" alt="Diferenciadores" class="w-3/4 h-auto object-cover rounded-lg"> -->
-<img alt="Diferenciadores" class="w-full md:w-full h-auto object-contain rounded-lg" id="diferenciadores-image" loading="lazy" src="Imagenes/diferenciadores.webp"/>
+<img alt="Diferenciadores" class="w-full md:w-full h-auto object-contain rounded-lg" id="diferenciadores-image" loading="lazy" src="diferenciadores.webp"/>
 </div>
 </div>
 <!-- Diferenciadores en bullets -->
@@ -861,7 +861,7 @@
 </section>
 <!-- Sección CTA -->
 <section class="mb-32">
-<div class="cta-background relative z-0 py-20 overflow-hidden bg-no-repeat bg-cover bg-center aos-init order-last" id="cta-imagen" style="background-image:url(Imagenes/cta.webp); height: 500px; background-position: center;">
+<div class="cta-background relative z-0 py-20 overflow-hidden bg-no-repeat bg-cover bg-center aos-init order-last" id="cta-imagen" style="background-image:url(cta.webp); height: 500px; background-position: center;">
 </div>
 <div class="relative z-30 container mx-auto px-6 md:px-10 md:pt-10 order-first">
 <div class="text-center text-gray-800">
@@ -882,7 +882,7 @@
 <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8 xl:grid-cols-4">
 <a class="group" data-aos="fade-down" data-aos-delay="1200" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Invernaderos de Polietileno de Larga Duración*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Invernaderos de Polietileno de Larga Duración" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img1.webp"/>
+<img alt="Invernaderos de Polietileno de Larga Duración" class="h-full w-full object-cover object-center group-hover:opacity-75" src="lista_productos_img1.webp"/>
 </div>
 <h3 class="mt-4 text-lg font-extrabold text-gray-900">Invernaderos de Polietileno de Larga Duración</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Invernaderos robustos diseñados para maximizar la producción todo el año, con material de polietileno duradero y resistente al clima.</p>
@@ -890,7 +890,7 @@
 
 <a class="group" data-aos="fade-down" data-aos-delay="1450" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Cubiertas Reforzadas para Invernadero*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Cubiertas Reforzadas para Invernadero" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img2.webp"/>
+<img alt="Cubiertas Reforzadas para Invernadero" class="h-full w-full object-cover object-center group-hover:opacity-75" src="lista_productos_img2.webp"/>
 </div>
 <h3 class="mt-4 text-lg font-extrabold text-gray-900">Cubiertas Reforzadas para Invernadero</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Protege tus cultivos con cubiertas reforzadas de alta tecnología, ofreciendo máxima transparencia y resistencia a los elementos.</p>
@@ -898,7 +898,7 @@
 
 <a class="group" data-aos="fade-down" data-aos-delay="1700" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Estructuras Metálicas para Invernaderos*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Estructuras Metálicas para Invernaderos" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img3.webp"/>
+<img alt="Estructuras Metálicas para Invernaderos" class="h-full w-full object-cover object-center group-hover:opacity-75" src="lista_productos_img3.webp"/>
 </div>
 <h3 class="mt-4 text-lg font-extrabold text-gray-900">Estructuras Metálicas para Invernaderos</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Construye la base de tu producción agrícola con estructuras metálicas galvanizadas, diseñadas para una instalación eficiente y una larga vida útil.</p>
@@ -906,7 +906,7 @@
 
 <a class="group" data-aos="fade-down" data-aos-delay="1950" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Invernaderos Ventilados de Alto Rendimiento*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Invernaderos Ventilados de Alto Rendimiento" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img4.webp"/>
+<img alt="Invernaderos Ventilados de Alto Rendimiento" class="h-full w-full object-cover object-center group-hover:opacity-75" src="lista_productos_img4.webp"/>
 </div>
 <h3 class="mt-4 text-lg font-extrabold text-gray-900">Invernaderos Ventilados de Alto Rendimiento</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Asegura una ventilación óptima y control de temperatura con invernaderos especializados, ideales para cultivos que requieren condiciones específicas.</p>
@@ -914,7 +914,7 @@
 
 <a class="group" data-aos="fade-down" data-aos-delay="2200" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Sistema de Anclaje para Invernaderos*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Sistema de Anclaje para Invernaderos" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img5.webp"/>
+<img alt="Sistema de Anclaje para Invernaderos" class="h-full w-full object-cover object-center group-hover:opacity-75" src="lista_productos_img5.webp"/>
 </div>
 <h3 class="mt-4 text-lg font-extrabold text-gray-900">Sistema de Anclaje para Invernaderos</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Anclajes de precisión para invernaderos, diseñados para garantizar estabilidad y resistencia frente a vientos fuertes y condiciones adversas.</p>
@@ -922,7 +922,7 @@
 
 <a class="group" data-aos="fade-down" data-aos-delay="2450" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Conectores de Acero Ajustables*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Conectores de Acero Ajustables" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img6.webp"/>
+<img alt="Conectores de Acero Ajustables" class="h-full w-full object-cover object-center group-hover:opacity-75" src="lista_productos_img6.webp"/>
 </div>
 <h3 class="mt-4 text-lg font-extrabold text-gray-900">Conectores de Acero Ajustables</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Facilita la construcción y el ensamblaje de invernaderos con conectores de acero ajustables, proporcionando solidez y flexibilidad estructural.</p>
@@ -930,7 +930,7 @@
 
 <a class="group" data-aos="fade-down" data-aos-delay="2700" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Piezas Metálicas para Montaje*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Piezas Metálicas para Montaje" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img7.webp"/>
+<img alt="Piezas Metálicas para Montaje" class="h-full w-full object-cover object-center group-hover:opacity-75" src="lista_productos_img7.webp"/>
 </div>
 <h3 class="mt-4 text-lg font-extrabold text-gray-900">Piezas Metálicas para Montaje</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Componentes metálicos de alta calidad para el montaje de estructuras agrícolas, ofreciendo seguridad y durabilidad en cada conexión.</p>
@@ -938,7 +938,7 @@
 
 <a class="group" data-aos="fade-down" data-aos-delay="2950" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Perfiles de Aluminio para Invernadero*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Perfiles de Aluminio para Invernadero" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img8.webp"/>
+<img alt="Perfiles de Aluminio para Invernadero" class="h-full w-full object-cover object-center group-hover:opacity-75" src="lista_productos_img8.webp"/>
 </div>
 <h3 class="mt-4 text-lg font-extrabold text-gray-900">Perfiles de Aluminio para Invernadero</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Perfiles de aluminio personalizados para el ensamblaje rápido y eficiente de invernaderos, combinando ligereza con resistencia extrema.</p>
@@ -946,7 +946,7 @@
 
 <a class="group" data-aos="fade-down" data-aos-delay="3200" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Accesorios de Acero Inoxidable*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Accesorios de Acero Inoxidable" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img9.webp"/>
+<img alt="Accesorios de Acero Inoxidable" class="h-full w-full object-cover object-center group-hover:opacity-75" src="lista_productos_img9.webp"/>
 </div>
 <h3 class="mt-4 text-lg font-extrabold text-gray-900">Accesorios de Acero Inoxidable</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Optimiza tu invernadero con accesorios de acero inoxidable, resistentes a la corrosión y diseñados para un rendimiento duradero en ambientes húmedos.</p>
@@ -994,7 +994,7 @@
 </div>
 <!-- Imagen a la derecha -->
 <div class="flex flex-col items-center w-[45%] ml-5 max-md:w-full max-md:ml-0 hover:scale-105" data-aos="fade-left" data-aos-delay="1000">
-<img class="aspect-[1.16] object-contain object-center w-3/4 overflow-hidden grow max-md:max-w-full max-md:mt-10" id="mas-info-img1" loading="lazy" src="Imagenes/mas_info_img1.webp">
+<img class="aspect-[1.16] object-contain object-center w-3/4 overflow-hidden grow max-md:max-w-full max-md:mt-10" id="mas-info-img1" loading="lazy" src="mas_info_img1.webp">
 </img></div>
 </div>
 </div>
@@ -1003,7 +1003,7 @@
 <div class="flex flex-col-reverse md:flex-row gap-5 max-md:items-stretch max-md:gap-0">
 <!-- Imagen a la izquierda para escritorio, abajo para móvil -->
 <div class="flex flex-col items-center w-[45%] mr-5 max-md:w-full max-md:mr-0 hover:scale-105" data-aos="fade-right" data-aos-delay="1000">
-<img class="aspect-[1.16] object-contain object-center w-3/4 overflow-hidden grow max-md:max-w-full max-md:mt-10" id="mas-info-img2" loading="lazy" src="Imagenes/mas_info_img2.webp"/>
+<img class="aspect-[1.16] object-contain object-center w-3/4 overflow-hidden grow max-md:max-w-full max-md:mt-10" id="mas-info-img2" loading="lazy" src="mas_info_img2.webp"/>
 </div>
 <!-- Texto -->
 <div class="flex flex-col items-stretch w-[49%] max-md:w-full max-md:ml-0">
@@ -1074,7 +1074,7 @@
 </div>
 <!-- Imagen a la derecha -->
 <div class="flex flex-col items-center w-[45%] ml-5 max-md:w-full max-md:ml-0 hover:scale-105" data-aos="fade-left" data-aos-delay="1000">
-<img class="aspect-[1.16] object-contain object-center w-3/4 overflow-hidden grow max-md:max-w-full max-md:mt-10" id="mas-info-img3" loading="lazy" src="Imagenes/mas_info_img3.webp"/>
+<img class="aspect-[1.16] object-contain object-center w-3/4 overflow-hidden grow max-md:max-w-full max-md:mt-10" id="mas-info-img3" loading="lazy" src="mas_info_img3.webp"/>
 </div>
 </div>
 </div>
@@ -1145,7 +1145,7 @@
 <!-- Sección Acerca de nosotros -->
 <section class="relative bg-gray-50 py-20" id="acerca-de">
 <div class="absolute inset-1">
-<img class="object-cover h-full w-full z-0" id="imagen-fondo-acerca-de" src="Imagenes/acerca_de_fondo_escritorio.webp">
+<img class="object-cover h-full w-full z-0" id="imagen-fondo-acerca-de" src="acerca_de_fondo_escritorio.webp">
 </img></div>
 <h1 class="text-3xl md:text-6xl pb-10 font-extrabold text-center text-white capitalize drop-shadow-xl" data-aos="fade-down" data-aos-delay="0" id="titulo-acercade">Acerca de Aristeel</h1>
 <div class="container mx-auto px-4">
