--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Aristeel SA de CV</title>
-<link href="https://firebasestorage.googleapis.com/v0/b/aristeel.appspot.com/o/2.png?alt=media&amp;token=11aa8d11-80a3-4533-aa38-46299e51e981" rel="icon"/>
+<link href="https://firebasestorage.googleapis.com/v0/b/aristeel.appspot.com/o/Logos%20(Website).png?alt=media&amp;token=3b9cd9cf-5799-4699-81d3-c4eab79049b8" rel="icon"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet"/>
 <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
 <script src="https://cdn.tailwindcss.com"></script>
@@ -687,7 +687,7 @@
 <div class="flex items-center">
 <a class="text-sm mx-4 md:text-xxl font-bold" data-aos="fade-right" data-aos-delay="1000" href="index.html">Inicio</a>
 <a class="text-sm mx-4 md:text-xxl font-bold" data-aos="fade-right" data-aos-delay="1300" href="#google-places">Ubicación</a>
-<a class="text-sm mx-4 md:text-xxl font-bold" data-aos="fade-right" data-aos-delay="1200" href="#lista-productos" id="navbar-tipo">Más Sobre Nuestros Productos</a>
+<a class="text-sm mx-4 md:text-xxl font-bold" data-aos="fade-right" data-aos-delay="1200" href="#lista-productos" id="navbar-tipo">Nuestros Productos</a>
 </div>
 <a href="#contacto" rel="noopener noreferrer" target="_blank">
 <img alt="Icon" class="w-10 h-10 ml-4" loading="lazy" src="https://cdn-icons-png.flaticon.com/512/2504/2504957.png"/>
@@ -706,8 +706,8 @@
 <div class="grid grid-cols-1 items-center justify-items-center">
 <div class="py-0 front-elements">
 <div class="flex justify-center">
-<div class="md:mt--2 flex justify-center items-center bg-white rounded drop-shadow-xl h-full w-8/12 h-full md:w-3/4 bg-opacity-0" data-aos="fade-down" id="card-logo">
-<img alt="logo" class="aos-init aos-animate w-8/12 h-full md:w-3/4" data-aos="fade-up" fetchpriority="high" id="logo-image" src="logo.webp"/>
+<div class="mt-10 md:mt--2 flex justify-center items-center bg-white rounded drop-shadow-xl h-full w-full h-full md:w-3/4 bg-opacity-0" data-aos="fade-down" id="card-logo">
+<img alt="logo" class="aos-init aos-animate w-full h-full md:w-3/4" data-aos="fade-up" fetchpriority="high" id="logo-image" src="logo.webp"/>
 </div>
 </div>
 <h1 class="text-5xl md:text-8xl text-center font-bold drop-shadow-xl" data-aos="fade-up" id="nombre-empresa"></h1>
