--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@
 				</h2>
 <div class="flex items-center space-x-2 text-xl md:text-2xl drop-shadow-xl" data-aos="fade-up" data-aos-delay="600">
 <img alt="location" class="w-10 h-10" src="https://cdn-icons-png.flaticon.com/512/684/684908.png">
-<p class="mb-2 font-bold" id="ubicacion-ciudad">Carretera San Alejo-Zacualpan km. 4.5, Colonia Adolfo Lopez Mateos, Coatepec Harinas, Edo. Mex</p>
+<p class="mb-2 font-bold" id="ubicacion-ciudad">Aristeel, 51735 Estado de México</p>
 </img></div>
 </div>
 </div>
