--- a/index.html
+++ b/index.html
@@ -779,39 +779,39 @@
 <div class="bg-white">
 <div class="mx-auto max-w-2xl px-4 py-10 sm:px-6 sm:py-15 lg:max-w-7xl lg:px-8">
 <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8 xl:grid-cols-4">
-<a class="group" data-aos="fade-down" data-aos-delay="1200" data-aos-offset="-50" href="https://wa.me/5554382669?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*PTR Galvanizado*">
+<a class="group" data-aos="fade-down" data-aos-delay="1200" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*PTR Galvanizado (Distintos diámetros)*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="PTR Galvanizado" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img1.webp"/>
+<img alt="PTR Galvanizado (Distintos diámetros)" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img1.webp"/>
 </div>
-<h3 class="mt-4 text-lg font-extrabold text-gray-900">PTR Galvanizado</h3>
+<h3 class="mt-4 text-lg font-extrabold text-gray-900">PTR Galvanizado (Distintos diámetros)</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Ideal para estructuras de invernadero, este PTR galvanizado combina durabilidad y resistencia a la corrosión.</p>
 </a>
 
-<a class="group" data-aos="fade-down" data-aos-delay="1450" data-aos-offset="-50" href="https://wa.me/5554382669?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Capitel Cuadrado*">
+<a class="group" data-aos="fade-down" data-aos-delay="1450" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Capitel Cuadrado (Distintos diámetros)*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Capitel Cuadrado" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img2.webp"/>
+<img alt="Capitel Cuadrado (Distintos diámetros)" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img2.webp"/>
 </div>
-<h3 class="mt-4 text-lg font-extrabold text-gray-900">Capitel Cuadrado</h3>
-<p class="mt-1 text-sm font-medium text-gray-600">Optimizado para una rápida instalación en estructuras de acero, el capitel cuadrado asegura conexiones firmes y estables, esencial para la integridad estructural de invernaderos.</p>
+<h3 class="mt-4 text-lg font-extrabold text-gray-900">Capitel Cuadrado (Distintos diámetros)</h3>
+<p class="mt-1 text-sm font-medium text-gray-600">El capitel cuadrado asegura conexiones firmes y estables, esencial para la integridad estructural de invernaderos.</p>
 </a>
 
-<a class="group" data-aos="fade-down" data-aos-delay="1700" data-aos-offset="-50" href="https://wa.me/5554382669?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Capitel Redondo*">
+<a class="group" data-aos="fade-down" data-aos-delay="1700" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Capitel Redondo (Distintos diámetros)*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Capitel Redondo" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img3.webp"/>
+<img alt="Capitel Redondo (Distintos diámetros)" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img3.webp"/>
 </div>
-<h3 class="mt-4 text-lg font-extrabold text-gray-900">Capitel Redondo</h3>
+<h3 class="mt-4 text-lg font-extrabold text-gray-900">Capitel Redondo (Distintos diámetros)</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Este capitel redondo destaca por su acabado galvanizado, ofreciendo protección prolongada contra la corrosión.</p>
 </a>
 
-<a class="group" data-aos="fade-down" data-aos-delay="1950" data-aos-offset="-50" href="https://wa.me/5554382669?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Capitel Combinado*">
+<a class="group" data-aos="fade-down" data-aos-delay="1950" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Capitel Combinado (Distintos diámetros)*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Capitel Combinado" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img4.webp"/>
+<img alt="Capitel Combinado (Distintos diámetros)" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img4.webp"/>
 </div>
-<h3 class="mt-4 text-lg font-extrabold text-gray-900">Capitel Combinado</h3>
+<h3 class="mt-4 text-lg font-extrabold text-gray-900">Capitel Combinado (Distintos diámetros)</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Componente de acero galvanizado esencial para unir arcos y pilares en invernaderos, asegurando estabilidad estructural.</p>
 </a>
 
-<a class="group" data-aos="fade-down" data-aos-delay="2200" data-aos-offset="-50" href="https://wa.me/5554382669?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Tornilleria*">
+<a class="group" data-aos="fade-down" data-aos-delay="2200" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Tornilleria*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
 <img alt="Tornilleria" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img5.webp"/>
 </div>
@@ -819,23 +819,23 @@
 <p class="mt-1 text-sm font-medium text-gray-600">Variedad de tornillos, tuercas y arandelas resistentes a la corrosión para ensamblar estructuras de invernaderos.</p>
 </a>
 
-<a class="group" data-aos="fade-down" data-aos-delay="2450" data-aos-offset="-50" href="https://wa.me/5554382669?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Abrazaderas Redondas*">
+<a class="group" data-aos="fade-down" data-aos-delay="2450" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Abrazaderas Redondas (Distintos diámetros)*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Abrazaderas Redondas" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img6.webp"/>
+<img alt="Abrazaderas Redondas (Distintos diámetros)" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img6.webp"/>
 </div>
-<h3 class="mt-4 text-lg font-extrabold text-gray-900">Abrazaderas Redondas</h3>
+<h3 class="mt-4 text-lg font-extrabold text-gray-900">Abrazaderas Redondas (Distintos diámetros)</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Utilizadas para fijar tubos redondos, garantizan la seguridad y estabilidad de componentes en invernaderos.</p>
 </a>
 
-<a class="group" data-aos="fade-down" data-aos-delay="2700" data-aos-offset="-50" href="https://wa.me/5554382669?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Abrazaderas Cuadradas*">
+<a class="group" data-aos="fade-down" data-aos-delay="2700" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Abrazaderas Cuadradas (Distintos diámetros)*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-<img alt="Abrazaderas Cuadradas" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img7.webp"/>
+<img alt="Abrazaderas Cuadradas (Distintos diámetros)" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img7.webp"/>
 </div>
-<h3 class="mt-4 text-lg font-extrabold text-gray-900">Abrazaderas Cuadradas</h3>
+<h3 class="mt-4 text-lg font-extrabold text-gray-900">Abrazaderas Cuadradas (Distintos diámetros)</h3>
 <p class="mt-1 text-sm font-medium text-gray-600">Para sujetar tubos cuadrados, esenciales en la construcción de invernaderos, ofrecen robustez y alineación.</p>
 </a>
 
-<a class="group" data-aos="fade-down" data-aos-delay="2950" data-aos-offset="-50" href="https://wa.me/5554382669?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Perfil de Acero Galvanizado*">
+<a class="group" data-aos="fade-down" data-aos-delay="2950" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Perfil de Acero Galvanizado*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
 <img alt="Perfil de Acero Galvanizado" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img8.webp"/>
 </div>
@@ -843,7 +843,7 @@
 <p class="mt-1 text-sm font-medium text-gray-600">Base estructural versátil y resistente contra la corrosión para invernaderos, disponible en diversas formas y tamaños.</p>
 </a>
 
-<a class="group" data-aos="fade-down" data-aos-delay="3200" data-aos-offset="-50" href="https://wa.me/5554382669?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Cinta de Riego*">
+<a class="group" data-aos="fade-down" data-aos-delay="3200" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Cinta de Riego*">
 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
 <img alt="Cinta de Riego" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img9.webp"/>
 </div>
@@ -851,6 +851,29 @@
 <p class="mt-1 text-sm font-medium text-gray-600">Sistema de irrigación por goteo eficiente para la distribución uniforme de agua, optimizando el consumo y la producción.</p>
 </a>
 
+<a class="group" data-aos="fade-down" data-aos-delay="3450" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Abrazadera de Buje (Una sola medida)*">
+<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
+<img alt="Abrazadera de Buje (Una sola medida)" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img10.webp"/>
+</div>
+<h3 class="mt-4 text-lg font-extrabold text-gray-900">Abrazadera de Buje (Una sola medida)</h3>
+<p class="mt-1 text-sm font-medium text-gray-600">Abrazadera de buje para sujeción firme en invernaderos, diseñada para una medida específica.</p>
+</a>
+
+<a class="group" data-aos="fade-down" data-aos-delay="3700" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Abrazadera Doble (Una sola medida)*">
+<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
+<img alt="Abrazadera Doble (Una sola medida)" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img11.webp"/>
+</div>
+<h3 class="mt-4 text-lg font-extrabold text-gray-900">Abrazadera Doble (Una sola medida)</h3>
+<p class="mt-1 text-sm font-medium text-gray-600">Su sistema de pernos permite un ajuste firme y estable, capaz de sujetar dos tubos de manera segura. Disponible en una sola medida.</p>
+</a>
+
+<a class="group" data-aos="fade-down" data-aos-delay="3950" data-aos-offset="-50" href="https://wa.me/5217223943105?text=Hola!%20Me%20interesa%20hacer%20una%20cotización%20del%20producto%20que%20vi%20en%20su%20página%20web%20*Abrazadera Omega (Distintos diámetros)*">
+<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
+<img alt="Abrazadera Omega (Distintos diámetros)" class="h-full w-full object-cover object-center group-hover:opacity-75" src="Imagenes/lista_productos_img12.webp"/>
+</div>
+<h3 class="mt-4 text-lg font-extrabold text-gray-900">Abrazadera Omega (Distintos diámetros)</h3>
+<p class="mt-1 text-sm font-medium text-gray-600">Abrazadera ajustable para distintos diámetros. Ideal para fijar tuberías en invernaderos, asegurando estabilidad y alineación.</p>
+</a>
 </div>
 </div>
 </div>
@@ -1155,7 +1178,7 @@
 				</h2>
 <div class="flex items-center space-x-2 text-xl md:text-2xl drop-shadow-xl" data-aos="fade-up" data-aos-delay="600">
 <img alt="location" class="w-10 h-10" src="https://cdn-icons-png.flaticon.com/512/684/684908.png">
-<p class="mb-2 font-bold" id="ubicacion-ciudad">Aristeel, 51735 Estado de México</p>
+<p class="mb-2 font-bold" id="ubicacion-ciudad">51735 Colonia Adolfo López Mateos Edo. Méx., Mexico</p>
 </img></div>
 </div>
 </div>
@@ -1176,14 +1199,14 @@
 <h2 class="text-4xl md:text-6xl font-bold mb-4 drop-shadow-xl" data-aos="fade-up" data-aos-delay="200" id="contactanos-title">Contáctanos para Equipar tu Invernadero</h2>
 <p class="text-xl md:text-2xl font-semibold drop-shadow-xl" data-aos="fade-up" data-aos-delay="500" id="contacto-descripcion">Solicita tu cotización personalizada para tu sistemas de riego y tu invernadero vía WhatsApp.</p>
 <!-- <p class="text-xl md:text-2xl pt-20 font-bold" data-aos="fade-up" data-aos-delay="2500">Construcciones y Proyectos DYCMACO</p> -->
-<p class="text-xl md:text-2xl mt-10 font-semibold drop-shadow-xl" data-aos="fade-up" data-aos-delay="1000">Whatsapp: <span class="font-normal" id="contacto-telefono">+55 5438 2669</span></p>
+<p class="text-xl md:text-2xl mt-10 font-semibold drop-shadow-xl" data-aos="fade-up" data-aos-delay="1000">Whatsapp: <span class="font-normal" id="contacto-telefono">+52 1 722 394 3105</span></p>
 <p class="text-xl md:text-2xl font-semibold drop-shadow-xl" data-aos="fade-up" data-aos-delay="900">Email:
 							<span class="font-normal" id="contacto-correo">aristeel@aristeel.com</span>
 </p>
 </div>
 <!-- <div class="mt-50 text-center"> -->
 <div class="py-10">
-<a href="https://wa.me/5554382669?text=Hola!%20Quiero%20ponerme%20en%20contacto%20su%20negocio!" id="boton-whatsapp">
+<a href="https://wa.me/5217223943105?text=Hola!%20Quiero%20ponerme%20en%20contacto%20su%20negocio!" id="boton-whatsapp">
 <button class="py-2 px-8 bg-gradient-to-b from-slate-300 to-slate-500 hover:from-emerald-400 hover:to-emerald-600 rounded-md shadow-lg" data-aos="fade-up" data-aos-delay="1200" type="button">
 <h2 class="text-2xl md:text-2xl font-bold text-white">Whatsapp
 								</h2>
