--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		window.addEventListener('DOMContentLoaded', () => {
 			const heroBackground1 = document.getElementById('hero-background-1');
 			const heroBackground2 = document.getElementById('hero-background-2');
-			const images = ["Imagenes/hero1.webp", "Imagenes/hero2.webp", "Imagenes/hero3.webp", "Imagenes/hero4.webp"];
+			const images = ["Imagenes/hero1.webp", "Imagenes/hero2.webp", "Imagenes/hero3.webp", "Imagenes/hero4.webp", "Imagenes/hero5.webp", "Imagenes/hero6.webp"];
 
 			// Iniciar el carrusel solo si la ventana es mayor que 768px
 			changeBackgroundImage(heroBackground1, heroBackground2, images, 0);
@@ -712,7 +712,7 @@
 </div>
 <h1 class="text-5xl md:text-8xl text-center font-bold drop-shadow-xl" data-aos="fade-up" id="nombre-empresa"></h1>
 <div class="text-center py-10 px-1 md:px-0">
-<h1 class="text-2xl font-bold text-white md:text-4xl drop-shadow-xl" data-aos="fade-up" data-aos-delay="800" data-aos-offset="-100" id="slogan">Estructuras de Acero, Accesorios para Invernaderos y sistemas de riego</h1>
+<h1 class="text-2xl font-bold text-white md:text-4xl drop-shadow-xl" data-aos="fade-up" data-aos-delay="800" data-aos-offset="-100" id="slogan">Fabricante de invernaderos, Accesorios para Invernaderos y sistemas de riego</h1>
 <div class="flex justify-center mt-4 space-x-0 md:space-x-2">
 <a class="text-right" href="#lista-productos">
 <!-- <svg aria-hidden="true" class="w-5 h-5 mr-2 -ml-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path></svg> -->
@@ -744,7 +744,7 @@
 <p class="text-xl font-bold text-zinc-200" data-aos="fade-right" data-aos-delay="600" id="subtitulo-empresa">Líderes en Innovación Agrícola</p>
 </div>
 <hr class="mt-4" data-aos="fade-right" data-aos-delay="600" style="border-color: whitesmoke; width: 600px;"/>
-<p class="mt-4 pr-5 text-md leading-relaxed text-zinc-50 md:text-xl" data-aos="fade-right" data-aos-delay="800" id="descripcion-empresa">Con más de 20 años en el mercado y 3 millones de metros cuadrados construidos, nos destacamos en el suministro de accesorios para invernaderos y sistemas de riego de vanguardia, complementados con nuestra experiencia en estructuras de acero e invernaderos.</p>
+<p class="mt-4 pr-5 text-md leading-relaxed text-zinc-50 md:text-xl" data-aos="fade-right" data-aos-delay="800" id="descripcion-empresa">Con más de 20 años en el mercado y 3 millones de metros cuadrados construidos, nos destacamos en el suministro de accesorios para invernaderos y sistemas de riego de vanguardia, complementados con nuestra experiencia en Fabricante de invernaderos e invernaderos.</p>
 </div>
 </div>
 </main>
